--- a/.github/workflows/sqlexec.yml
+++ b/.github/workflows/sqlexec.yml
@@ -20,14 +20,18 @@ jobs:
     - name: Set build info
       run: '& iex ((New-Object System.Net.WebClient).DownloadString("$env:PS_SOURCE_URL/buildinfo.ps1"))'
       shell: pwsh
-    - name: Restore
-      run: dotnet restore "${{ env.WORKING_DIRECTORY }}"
     - name: Build
-      run: dotnet build "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-restore
-    - name: Test
-      run: dotnet test "${{ env.WORKING_DIRECTORY }}" --no-build
+      run: >
+        dotnet build
+        src/sqlexecDevWeb/sqlexecDevWeb.csproj 
+        --configuration ${{ env.CONFIGURATION }}
     - name: Publish
-      run: dotnet publish "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-build --output "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
+      run: >
+        dotnet publish
+        src/sqlexecDevWeb/sqlexecDevWeb.csproj
+        --configuration ${{ env.CONFIGURATION }}
+        --no-build
+        --output "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
     - name: Publish Artifacts
       uses: actions/upload-artifact@v3
       with:
