--- a/.github/workflows/sqlexec.yml
+++ b/.github/workflows/sqlexec.yml
@@ -20,6 +20,14 @@ jobs:
     - name: Set build info
       run: '& iex ((New-Object System.Net.WebClient).DownloadString("$env:PS_SOURCE_URL/buildinfo.ps1"))'
       shell: pwsh
+    - name: Create nuget.config
+      run: dotnet new nugetconfig
+    - name: Set nuget add azure public feed
+      run: >
+        dotnet nuget add
+        source https://pkgs.dev.azure.com/sorling/PublicFeed/_packaging/PublicFeed/nuget/v3/index.json
+        -n azurepublic
+        --configfile nuget.config
     - name: Build
       run: >
         dotnet build
