--- a/src/sqlexecDevWeb/sqlexecDevWeb.csproj
+++ b/src/sqlexecDevWeb/sqlexecDevWeb.csproj
@@ -1,18 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
-        <Version>0.9.1.0</Version>
+        <Version>0.9.2.0</Version>
         <ImplicitUsings>enable</ImplicitUsings>
         <AssemblyName>Sorling.$(MSBuildProjectName)</AssemblyName>
         <RootNamespace>Sorling.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
+        <Configurations>Debug;Release;OutputTests</Configurations>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.175" />
-        <PackageReference Include="Sorling.SqlConnAuthWeb" Version="0.9.1.8" />
-        <PackageReference Include="Sorling.SqlExecMeta" Version="0.9.1.11" />
+        <PackageReference Include="Sorling.SqlConnAuthWeb" Version="0.9.1.9" />
+        <PackageReference Include="Sorling.SqlExecMeta" Version="0.9.1.14" />
     </ItemGroup>
 
     <ItemGroup>
