--- a/src/sqlexecCodeGen/sqlexecCodeGen.csproj
+++ b/src/sqlexecCodeGen/sqlexecCodeGen.csproj
@@ -1,15 +1,32 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <RootNamespace>Sorling.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
-    <AssemblyName>Sorling.$(MSBuildProjectName)</AssemblyName>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net9.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+        <RootNamespace>Sorling.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
+        <AssemblyName>Sorling.$(MSBuildProjectName)</AssemblyName>
+        <Configurations>Debug;Release;OutputTests</Configurations>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Sorling.SqlExecMeta" Version="0.9.1.11" />
-  </ItemGroup>
+    <ItemGroup>
+        <Compile Remove="csharp\resources\**\*" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Sorling.SqlExecMeta" Version="0.9.1.14" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <EmbeddedResource Include="csharp\resources\**\*" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <Compile Remove="project\sqlscripts\**\*" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <EmbeddedResource Include="project\sqlscripts\**\*" />
+    </ItemGroup>
 
 </Project>
