--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@
 /src/CodeOutputTests/bin/Debug/net8.0
 /src/CodeOutputTests/obj
 /src/CodeOutputTests/bin
+/src/sqlexecDevWeb/Properties/PublishProfiles
