--- a/src/sqlexecDevWeb/sqlexecDevWeb.csproj
+++ b/src/sqlexecDevWeb/sqlexecDevWeb.csproj
@@ -11,12 +11,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.175" />
-        <PackageReference Include="Sorling.SqlConnAuthWeb" Version="0.9.1.9" />
+        <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="3.0.71" />
+        <PackageReference Include="Sorling.SqlConnAuthWeb" Version="0.9.2.11" />
         <PackageReference Include="Sorling.SqlExecMeta" Version="0.9.1.14" />
     </ItemGroup>
 
     <ItemGroup>
         <Folder Include="wwwroot\img\" />
+        <Folder Include="wwwroot\lib\jquery-validation-unobtrusive\" />
     </ItemGroup>
 </Project>
