--- a/.github/workflows/sqlexec.yml
+++ b/.github/workflows/sqlexec.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
 env:
   AZURE_WEBAPP_NAME: sqlexec
-  AZURE_WEBAPP_PACKAGE_PATH: ./published
+  WEBAPP_PACKAGE_PATH: ./published
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 9.0.x
   WORKING_DIRECTORY: .
