--- a/.github/workflows/sqlexec.yml
+++ b/.github/workflows/sqlexec.yml
@@ -35,4 +35,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: webapp
-        path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+        path: ${{ env.WEBAPP_PACKAGE_PATH }}
