--- a/src/sqlexecDevWeb/sqlexecDevWeb.csproj
+++ b/src/sqlexecDevWeb/sqlexecDevWeb.csproj
@@ -5,10 +5,11 @@
         <Nullable>enable</Nullable>
         <Version>0.9.2.0</Version>
         <ImplicitUsings>enable</ImplicitUsings>
-        <AssemblyName>Sorling.$(MSBuildProjectName)</AssemblyName>
+        <AssemblyName>sqlexecdevweb</AssemblyName>
         <RootNamespace>Sorling.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
         <Configurations>Debug;Release;OutputTests</Configurations>
     </PropertyGroup>
+    
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="3.0.71" />
@@ -18,6 +19,11 @@
 
     <ItemGroup>
         <Folder Include="wwwroot\img\" />
-        <Folder Include="wwwroot\lib\jquery-validation-unobtrusive\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Update="libman.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 </Project>
